@@ -1,6 +1,8 @@
 maven-debian-helper (1.6.14) UNRELEASED; urgency=medium
 
   * Ignore the 'maven clean' errors when building with debhelper
+  * Do not run the tests when DEB_BUILD_OPTIONS=nocheck is specified
+    (Closes: #737988)
 
  -- Emmanuel Bourg <ebourg@apache.org>  Thu, 12 Nov 2015 10:10:31 +0100
 
